[tool.poetry]
name = "ec2-tmux-cssh"
version = "0.0.1"
description = "Generates tmux-cssh command based on tag key and value"
authors = ["Ricardo Rosales"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "==1.16.43"
inquirer = "==2.7.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
poethepoet = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
