[project]
name = "ec2-tmux-cssh"
version = "0.0.1"
description = "Generates tmux-cssh command based on tag key and value"
authors = [{ name = "Ricardo Rosales" }]
requires-python = ">=3.10,<4"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "boto3>=1.16.43",
    "inquirer>=3.0.0",
]

[dependency-groups]
dev = [
    "black>=20.8b1",
    "poethepoet>=0.42.0",
]

[tool.poe.tasks]
# use `poetry run poe <task>` to run these...
# NOTE: using TOML inline table syntax. If you want a multi-line table you should do:
## mytask.cmd = "abc"
## mytask.help = "def"
lint = { cmd = "black --check --line-length 120 *.py", help = "Use `black` to check the style of the application" }
lint-fix = { cmd = "black --line-length 120 *.py", help = "Same as `lint`, but will fix the application's style to conform with PEP8" }
main = { cmd = "python ./ec2-tmux-cssh.py", help = "Run ec2-tmux-cssh.py" }

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
